Changelog
=========

2.2 (not yet released)
----------------------

- updated tests for Plone 4. [dbaty]

- fixed default notification templates to have them work in Plone
  4. They do not work in Plone 3 anymore, though. [dbaty]


2.2a1 (21 April 2010)
---------------------

- Registered the permission in zcml and call setDefaultRoles in __init__.py. [jcbrand] 


2.2dev1 (25 February 2010)
--------------------------

- The svn repository for the new eggified package has changed:
  http://svn.plone.org/svn/collective/Products.CMFNotification [jcbrand]

- Made CMFNotification a setuptools/distribute Python egg package [jcbrand]

- Remove the creation/registration of the PTSTranslationDomain utility. It has
  been deprecated in favour of zope.18n.translationdomain.TranslationDomain
  [jcbrand]


2.1 (4 July 2008)
-----------------

- added notification on object removal

- added safety belts for perverted usage;

- added AJAX features in the subscription portlet: if the user has
  enabled Javascrpt, the page is not refreshed when (s)he presses the
  subscribe/unsubscribe button;

- rewrote overly complicated ``_getPreviousVersion()`` method.


2.0 (24 June 2008)
------------------

- finally provided an implementation for the ``previous`` binding that
  will let integrators display changes in notification template when
  an item is modified;

- added handler for item copy/paste, which now triggers "item
  creation" rules;

- moved installation code to Generic Setup steps;

- added an old Brazilian Portuguese translation contributed by Julio
  Monteiro;

- added labels on users selection rules so that different e-mails can
  be sent on the same action;

- added ``previous_state`` binding on workflow notification;

- fixed an i18n bug in the portal status messages generated by the
  subscribe/unsubscribe buttons in the portlet;

- added import/export mechanism for Generic Setup;

- changed the method that retrieves the mail template: by using