@@ -3,8 +3,6 @@
 $Id$
 """
 
-from StringIO import StringIO
-
 from zope.component import getUtility
 from zope.component import getMultiAdapter
 
@@ -13,12 +11,9 @@ from Products.CMFCore.utils import getToolByName
 from plone.portlets.interfaces import IPortletManager
 from plone.portlets.interfaces import IPortletAssignmentMapping
 
-from Products.CMFNotification.config import GLOBALS
-from Products.CMFNotification.config import LAYER_NAME
 from Products.CMFNotification.config import PORTLET_NAME
 from Products.CMFNotification.config import PROJECT_NAME
 from Products.CMFNotification.exportimport import addPermissions
-from Products.CMFNotification.NotificationTool import ID as TOOL_ID
 
 
 def install(context):
@@ -26,8 +21,6 @@ def install(context):
 
     Most of the job is done by a Generic Setup profile.
     """
-    out = StringIO()
-
     ## I do not know how (and if it is possible) to define that an
     ## import step is a dependency of the 'rolemap' step.
     addPermissions(context)
@@ -36,28 +29,18 @@ def install(context):
     setup_tool = getToolByName(context, 'portal_setup')
     setup_tool.runAllImportStepsFromProfile('profile-Products.CMFNotification:default')
 
-    print >> out, "Successfully installed %s." % PROJECT_NAME
-    return out.getvalue()
+    return 'Successfully installed %s.' % PROJECT_NAME
 
 
 def uninstall(context):
     """Uninstall CMFNotification."""
     portal = getToolByName(context, 'portal_url').getPortalObject()
+    ps = getToolByName(portal, "portal_setup")
+    irs = ps.getImportStepRegistry()
 
-    ## Remove tool
-    tool = getToolByName(portal, TOOL_ID, None)
-    if tool is not None:
-        portal.manage_delObjects([TOOL_ID])
-
-    ## Remove skin layer
-    skins_tool = getToolByName(portal, 'portal_skins')
-    selections = skins_tool._getSelections()
-    for skin, layers in selections.items():
-        layers = layers.split(',')
-        if LAYER_NAME in layers:
-            layers.remove(LAYER_NAME)
-        layers = ','.join(layers)
-        selections[skin] = layers
+    ## Import GenericSetup uninstallation profile
+    setup_tool = getToolByName(context, 'portal_setup')
+    setup_tool.runAllImportStepsFromProfile('profile-Products.CMFNotification:uninstall')
 
     ## Remove portlet
     rightColumn = getUtility(IPortletManager,
@@ -69,7 +52,30 @@ def uninstall(context):
     if PORTLET_NAME in right:
         del right[PORTLET_NAME]
 
+    ## FIXME: if a subscription portlet has been added somewhere, an
+    ## error will appear when a page is displayed because the portlet
+    ## manager will happpily try to display the portlet, which will
+    ## fail because there is no 'portal_notification' tool anymore.
+
+    ## Remove the import and export steps from portal_setup
+    ## Since 'remove=True' doesn't seem to work for import/export
+    ## steps, here we manually remove import/export steps (Kurt)
+    if 'export_cmfnotification' in ps.listExportSteps():
+        ps.manage_deleteExportSteps(['export_cmfnotification',])
+    if 'import_cmfnotification' in irs.listSteps():
+        ps.manage_deleteImportSteps(['import_cmfnotification',])
+
+    ## Remove installation step for the subscription portlet
+    if u'' in irs.listSteps():
+        ## The 2.2-dev step didn't specify an ID. So, check for a step
+        ## called '' (Kurt)
+        irs.unregisterStep('')
+    if 'import_cmfnotification_portlet' in irs.listSteps():
+        irs.unregisterStep('import_cmfnotification_portlet')
+
     ## Remove configlet
     panel = getToolByName(portal, 'portal_controlpanel')
     if panel is not None:
         panel.unregisterConfiglet('cmfnotification_configuration')
+
+    return '%s has been successfully uninstalled.' % PROJECT_NAME
