@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<object name="portal_controlpanel">
+  <configlet title="cmfnotification_configlet_title"
+             action_id="cmfnotification_configuration"
+             remove="True"
+             >
+    <permission>Manage portal</permission>
+  </configlet>
+</object>
