@@ -1,0 +1,14 @@
+<?xml version="1.0"?>
+<import-steps>
+
+  <import-step
+     id=""
+     version=""
+     handler="Products.CMFNotification.exportimport.addPortlet"
+     title="Add subscription portlet"
+     remove="True">
+    Add subscription portlet.
+    <dependency step="portlets"/>
+  </import-step>
+
+</import-steps>
