@@ -1,0 +1,7 @@
+<?xml version="1.0"?>
+<tool-setup>
+  <required tool_id="portal_notification"
+           class="Products.CMFNotification.NotificationTool.NotificationTool"
+           remove="True"
+           />
+</tool-setup>
