@@ -4,6 +4,8 @@ Changelog
 2.2 (not yet released)
 ----------------------
 
+- cleaned uninstallation through a GenericSetup profile. [kurt]
+
 - updated tests for Plone 4. [dbaty]
 
 - fixed default notification templates to have them work in Plone
